BS: Wstępny Layout

--- a/client/views/strona/strona_glowna.html
+++ b/client/views/strona/strona_glowna.html
@@ -1,3 +1,21 @@
 <template name="stronaGlowna">
-
+    <div>
+        <h3> Nasze Podejście </h3>
+        <!--<button type="button" class="btn btn-lg btn-primary">Default</button>-->
+        <p>
+            Specjalizujemy się w praktycznym stosowaniu technologii informatycznych w zakresie analizy danych. Dostarczamy wiedzę i rozwiązania dla dziedzin życia, w których duża ilość danych jest wyzwaniem. Oferujemy inne podejście do realizacji wdrożeń i systemów klasy BI
+        </p>
+        <p>
+            Doradzamy i dostarczamy rozwiązania umożliwiające wykorzystanie Twoich danych w celu zwiększenia efektywności Waszej organizacji.
+        </p>
+        <p>
+            Wskazujemy gdzie szukać danych i jak je pozyskiwać.
+        </p>
+        <p>
+            Pomagamy przygotować Twój zespół do efektywnego wykorzystania dostarczonego rozwiązania.
+        </p>
+        <p>
+            Dostarczamy wykwalifikowanych konsultantów z obszarów BI i DWH. Specjalizujemy się w technologiach Oracle, SAS i Teradata.
+        </p>
+    </div>
 </template>
