--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,8 +1,39 @@
 <template name="layout">
+    <div class="container-fluid background">
     <header>
         {{> header}}
     </header>
-    <div id="main">
-        {{> yield}}
+    <div class="row" style="height: 50px;"></div>
+        <div class="row">
+            <div class="col-md-1">
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>NASZE PODEJŚCIE</h5>
+                </div>
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>AKTUALNOŚCI</h5>
+                </div>
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>USŁUGI</h5>
+                </div>
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>PARTNERZY</h5>
+                </div>
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>PRACA</h5>
+                </div>
+                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
+                    <h5>KONTAKT</h5>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-4" style="background-color: #ffffff; height: 520px">
+                {{> yield}}
+            </div>
+
+        </div>
+    <div class="row fgWhite" style="background-color: black;">
+        <h6>OneBI 2015</h6>
     </div>
+    </div>
+
 </template>
