--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,4 +1,16 @@
 <template name="header">
-    <img src="onebi-logo.png" alt="OneBI" />
-    <p>Test</p>
+    <div class="row">
+        <div class="col-md-1" style="background-color: #ffffff; min-height: 60px; padding: 0px;">
+            <a href="#">
+                <img src="onebiLogo.png" alt="OneBI - Business Inteligence" style="width: 100%;"/>
+            </a>
+        </div>
+
+        <div class="col-md-1" style="background-color: #ffffff; min-height: 60px;"><h4 style="width: 100%">Business <span class="oneBIfgColor">Inteligence</span></h4></div>
+        <div class="col-md-10">
+            <a href="#" class="btn btn-default btn-xs pull-right oneBIbgColor fgWhite margin1"  role="button">en</a>
+            <a href="#" class="btn btn-default btn-xs pull-right oneBIbgColor fgWhite margin1"  role="button">pl</a>
+        </div>
+    </div>
+
 </template>
