--- a/client/views/strona/strona_glowna.html
+++ b/client/views/strona/strona_glowna.html
@@ -1,6 +1,7 @@
+<!--z niej nie korzystam -->
 <template name="stronaGlowna">
     <div>
-        <h3> Nasze Podejście </h3>
+        <h3> Nasze podejście </h3>
         <!--<button type="button" class="btn btn-lg btn-primary">Default</button>-->
         <p>
             Specjalizujemy się w praktycznym stosowaniu technologii informatycznych w zakresie analizy danych. Dostarczamy wiedzę i rozwiązania dla dziedzin życia, w których duża ilość danych jest wyzwaniem. Oferujemy inne podejście do realizacji wdrożeń i systemów klasy BI
