--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,15 +1,20 @@
 <template name="header">
     <div class="row">
-        <div class="col-md-1" style="background-color: #ffffff; min-height: 60px; padding: 0px;">
+        <div class="col-md-2" style="background-color: #ffffff;">
             <a href="#">
-                <img src="onebiLogo.png" alt="OneBI - Business Inteligence" style="width: 100%;"/>
+                <img src="onebiLogo.png" alt="OneBI - Business Inteligence" style="width: 100%;max-width: 100px; margin-top: 10px; margin-bottom: 10px"/>
             </a>
         </div>
 
-        <div class="col-md-1" style="background-color: #ffffff; min-height: 60px;"><h4 style="width: 100%">Business <span class="oneBIfgColor">Inteligence</span></h4></div>
+
         <div class="col-md-10">
             <a href="#" class="btn btn-default btn-xs pull-right oneBIbgColor fgWhite margin1"  role="button">en</a>
             <a href="#" class="btn btn-default btn-xs pull-right oneBIbgColor fgWhite margin1"  role="button">pl</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2" style="background-color: #ffffff;">
+            <h4 >Business <span class="oneBIfgColor">Inteligence</span></h4>
         </div>
     </div>
 
