--- a/client/style.css
+++ b/client/style.css
@@ -6,7 +6,9 @@
 }
 .background {
     background: url('background.png');
-    position: relative;
+
+    height: 100%;
+    width: 100%;
 }
 .fgWhite {
     color: #ffffff;
@@ -20,12 +22,16 @@
 .margin10 {
     margin: 10px;
 }
+.menu-padding {
+    padding-left: 0px;
+    padding-right: 0px;
+}
 .list-group{
 }
 .list-group-item {
 
-    text-align: center;
-    width: 250px;
+    text-align: right;
+    width: 100%;
     margin-bottom: 4px;
     margin-left: 0px;
 
@@ -44,14 +50,14 @@
 }
 @keyframes szerokosc
 {
-    0% { width:90px; }
-    100% { width:250px; }
+    0% { width:30%; }
+    100% { width:100%; }
 }
 
 @-webkit-keyframes szerokosc
 {
-    0% { width:90px; }
-    100% { width:250px; }
+    0% { width:30%; }
+    100% { width:100%; }
 }
 .list-group-item-text:hover{
     color: purple;
