--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -5,8 +5,7 @@
     </header>
     <div class="row" style="height: 50px;"></div>
         <div class="row">
-<<<<<<< Updated upstream
-            <div class="col-md-1">
+            <div class="col-md-2 menu-padding">
                 <div class="list-group" id="item">
                     <a class="list-group-item" href="{{pathFor 'naszePodejscie'}}" name="item"><p class="list-group-item-text">Nasze podejście</p></a>
                     <a class="list-group-item" href="{{pathFor 'uslugi'}}" name="item"><p class="list-group-item-text">Usługi</p></a>
@@ -15,32 +14,8 @@
                     <a class="list-group-item" href="{{pathFor 'kontakt'}}" name="item"><p class="list-group-item-text">Kontakt</p></a>
                 </div>
             </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-4" style="background-color: #ffffff; height: 520px; border-radius: 10px; margin-bottom: 10px">
-=======
-            <div class="col-md-2">
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>NASZE PODEJŚCIE</h5>
-                </div>
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>AKTUALNOŚCI</h5>
-                </div>
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>USŁUGI</h5>
-                </div>
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>PARTNERZY</h5>
-                </div>
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>PRACA</h5>
-                </div>
-                <div class="row margin-bottom2" style="background-color: #ffffff; text-align: center">
-                    <h5>KONTAKT</h5>
-                </div>
-            </div>
             <div class="col-md-1"></div>
-            <div class="col-md-6" style="background-color: #ffffff; min-height: 220px">
->>>>>>> Stashed changes
+            <div class="col-md-6" style="background-color: #ffffff; min-height: 800px">
                 {{> yield}}
             </div>
 
