--- a/client/views/strona/content.html
+++ b/client/views/strona/content.html
@@ -1,6 +1,6 @@
 <template name="naszePodejscie">
         <div class="title">
-            <h3> Nasze Podejście </h3>
+            <h3> Nasze podejście </h3>
         </div>
 
         <div class="content">
@@ -26,13 +26,13 @@
     <div class="title">
         <h3>Aktualności </h3>
     </div>
-</template>
 
-<template name="uslugi">
-    <div class="title">
-        <h3>Usługi</h3>
+    <div class="content">
+
     </div>
 </template>
+
+
 
 <template name="partnerzy">
     <div class="title">
@@ -56,4 +56,5 @@
         <p>00-695 Warszawa</p>
         <p>office@onebi.eu</p>
     </div>
+
 </template>
