--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-    <div class="row fgWhite" style="background-color: dimgray">
-        <h6>OneBI 2015</h6>
+    <div class="row footer" id="footer">
+        <span>Created by OneBI ®™ 2015 </span>
     </div>
 </template>
