--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,6 +1,6 @@
 <template name="header">
     <div class="row">
-        <div class="col-md-2" style="background-color: #ffffff;">
+        <div class="col-md-2" id="header">
             <a href="#">
                 <img src="onebiLogo.png" alt="OneBI - Business Inteligence" style="width: 100%;max-width: 100px; margin-top: 10px; margin-bottom: 10px"/>
             </a>
